[package]
name = "chronik-rocksdb"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2021"

[dependencies]
# Database
rocksdb = { version = "0.17" }

# Byte interpretation
zerocopy = "0.6"
byteorder = "1.4"

# Bitcoin stuff
bitcoinsuite-core = { path = "../../bitcoinsuite/bitcoinsuite-core" }

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../../bitcoinsuite/bitcoinsuite-error" }

# Fast hashing (not cryptographic)
seahash = "4.1"

hex = "0.4"

lru = "0.7"
rayon = "1.5"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "1.0"
