[package]
name = "chronik-rocksdb"
version = "0.1.0"
authors = ["Tobias Ruck <ruck.tobias@gmail.com>"]
edition = "2021"

[dependencies]
# Database
rocksdb = { version = "0.17" }

# Byte interpretation
zerocopy = "0.6"
byteorder = "1.4"

# Bitcoin stuff
bitcoinsuite-core = { path = "../../bitcoinsuite/bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../../bitcoinsuite/bitcoinsuite-slp" }

# Error handling
thiserror = "1.0"
bitcoinsuite-error = { path = "../../bitcoinsuite/bitcoinsuite-error" }

# Fast hashing (not cryptographic)
seahash = "4.1"

hex = "0.4"

# For caching
lru = "0.7"
# For parallelizing tx processing
rayon = "1.5"

# Serializing SLP data
serde = { version = "1.0", features = ["derive"] }

# Binary serialization of structs
bincode = "1.3"

# Protobuf
tonic = "0.6"
prost = "0.9"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "1.0"

[build-dependencies]
# Protobuf
tonic-build = "0.6"
